--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -4,14 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap" rel="stylesheet">
+    <!-- Fonts Awsome Icons -->
+    <script src="https://kit.fontawesome.com/127b2bdecd.js" crossorigin="anonymous"></script>
     <title>ProtectAI | </title>
 </head>
 <body>
     {% block content %}{% endblock %}
 
-
+    <footer class="container">
+        <div class="row">
+            <div class="col">
+                <h3>Location</h3>
+                <ul id="location">
+                    <li>622, Presidency Tower, Panama St, New York</li>
+                    <li>(+33) 00 00 00 00</li>
+                    <li>contact@protectai.fr</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>Follow Us</h3>
+                <ul id="social_media">
+                    <li><a href="https://fr-fr.facebook.com/" target="_blanck"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="https://twitter.com/" target="_blanck"><i class="fab fa-twitter-square"></i></a></li>
+                    <li><a href="fr.linkedin.com" target="_blanck"><i class="fab fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>Site Map</h3>
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Team</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
