--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -22,7 +22,7 @@
         <div class="container">
           <a class="navbar-brand" href="#">
                 <img src="http://placehold.it/150x50?text=Logo" alt="">
-                ProtectAI
+                <span>ProtectAI</span>
               </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
