--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -1,5 +1,28 @@
 {% extends "website/base.html" %}
 {% block content %}
-  
+  <header class="container-fluid">
+      <div class="container">
+        <div class="row">
+            <div class="col"> 
+                <h1>about us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, atque cupiditate accusantium facilis deleniti reiciendis, qui earum, sapiente recusandae ex quibusdam necessitatibus consequatur veritatis maxime. Saepe quis atque eum corrupti.</p>
+                <a href="#">Demonstration</a>
+            </div>
+            <div class="col"></div> 
+        </div>
+      </div>
+  </header>
+  <section class="container">
+    <div class="row mission">
+        <div class="col">
+            <h2>Our Mission</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad est ut quod voluptatem. Consequatur commodi ipsa non soluta fugit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rem exercitationem, eaque at qui quos beatae..</p>
+        </div>
+        <div class="col">
+
+        </div>
+    </div>
+  </section>
 
 {% endblock content %}
