--- a/website/static/website/nav.css
+++ b/website/static/website/nav.css
@@ -2,7 +2,7 @@
 
 .navbar-nav > li > a {
     font-family: var(--primary-font);
-    color:var(--primary-colors);
+    color:var(--primary-color);
     font-size: 1.2em;
     text-transform: uppercase;
 }
@@ -13,4 +13,7 @@
 .navbar-brand{
     font-family: var(--primary-font);
     font-weight: 600;
+}
+span{
+    color:var(--primary-color);
 }
