--- a/website/static/website/main.css
+++ b/website/static/website/main.css
@@ -1,6 +1,7 @@
 @import 'footer.css';
 @import 'nav.css';
 @import 'header.css';
+@import 'home.css';
 
 
 
@@ -27,10 +28,14 @@ h1,h2,h3{
     font-family: 'Poppins';
     color: var(--primary-color);
 }
+
 a{
     text-decoration: none;
 }
 
+p{
+    font-family: var(--secondary-font);
+}
 
 
 
