--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -12,16 +12,45 @@
         </div>
       </div>
   </header>
+  <!-- Mission -->
   <section class="container">
-    <div class="row mission">
-        <div class="col">
+    <div class="row">
+        <div class="col mission">
             <h2>Our Mission</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad est ut quod voluptatem. Consequatur commodi ipsa non soluta fugit.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rem exercitationem, eaque at qui quos beatae..</p>
         </div>
         <div class="col">
-
+            <img src="#" alt="">
         </div>
+    </div>
+  </section>
+  <!-- Services Section -->
+  <section class="container-fluid services">
+    <div class="container">
+        <div class="row">
+            <div class="text-center">
+                <h2>Services</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad est ut quod voluptatem. Consequatur commodi ipsa non soluta fugit.Ut dignissimos ullam voluptatem consequa</p>
+            </div>
+            <div class="row">
+                <div class="col">
+                   <h3>Service 1</h3>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti accusamus, ab, ut dignissimos ullam voluptatem consequa.</p>
+                </div>
+                <div class="col">
+                    <h3>Service 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti accusamus, ab, ut dignissimos ullam voluptatem consequa.</p>
+                 </div>
+                 <div class="col">
+                    <h3>Service 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis corrupti accusamus, ab, ut dignissimos ullam voluptatem consequa.</p>
+                 </div>
+            </div>
+            <div class="">
+                <a href="{'url website/services'}">Learn More</a>
+            </div>
+        </div> 
     </div>
   </section>
 
