--- a/website/static/website/home.css
+++ b/website/static/website/home.css
@@ -35,3 +35,56 @@
     text-decoration: none;
 }
 
+/*--- Founders section ---*/
+.founders{
+    margin-bottom: 50px;
+    padding: 35px;
+}
+
+.founders h2{
+    margin-bottom: 25px;
+}
+
+.founders h3{
+    font-size: 1em;
+}
+
+.founders a{
+    color: var(--primary-color);
+}
+
+.founders a{
+    color: var(--primary-color);
+}
+
+.founders a:hover{
+    color:var(--primary-color);
+    text-decoration: none;
+}
+
+/*--- Contact section ---*/
+.contact{
+    margin:50px;
+    padding: 55px;
+    color:#fff;
+    background: linear-gradient(216deg,#f7a01f 0%, #fad24a 59%); 
+}
+
+.contact h2{    
+    color: #fff;
+}
+.contact p{
+    margin-bottom: 15px;
+}
+.contact a{
+    margin-top:10px;
+    padding:15px;
+    color:#fff;
+    border: 2px solid #fff;
+    border-radius: 5px;
+}
+
+.contact a:hover{
+    color:#fff;
+    text-decoration: none;
+}
