templating services and team done

--- a/website/static/website/base/header.css
+++ b/website/static/website/base/header.css
@@ -3,7 +3,7 @@
     background: linear-gradient(216deg,#f7a01f 0%, #fad24a 59%);
     margin-bottom: 75px;
 }
-.col{
+header .col{
     padding: 50px;
 }
 
