--- a/website/static/website/main.css
+++ b/website/static/website/main.css
@@ -7,6 +7,7 @@
 @import 'home/contact_section.css';
 @import 'service/services.css';
 @import 'team/team_card_section.css';
+@import 'contact/contact.css';
 
 /* ----- VARIABLES ------*/
 :root{
