error didn't start a branch

--- a/website/templates/website/home_page/home_sections/mission_section.html
+++ b/website/templates/website/home_page/home_sections/mission_section.html
@@ -6,7 +6,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut rem exercitationem, eaque at qui quos beatae..</p>
         </div>
         <div class="col">
-            <img src="#" alt="">
+            <img src="Téléchargement/undraw_code_review_l1q9.png" alt="image place_holder">
         </div>
     </div>
 </section>
